# wgsl-playground

./: Cargo.toml
examples/: mandelbrot.wgsl
scratch/: fragment_shader.hlsl  vertex_shader.hlsl
shaders/: fragment.wgsl  vertex.wgsl
src/: main.rs  texture.rs  vertex.wgsl
