[package]
name = "wgsl-playground"
version = "0.1.8"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Playground for experimenting with WGSL fragment shaders with live-reloading."
resolver = "2"
repository = "https://github.com/paulgb/wgsl-playground"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.13", features = ["derive"] }
clap = { version = "4.3", features = ["derive"] }
futures = "0.3"
notify = "6.0"
wgpu = { version = "0.17", features = ['default', 'naga'] }
winit = "0.28"
wgpu-subscriber = "0.1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
